fix(footer) changed align-items: for footer links

--- a/assets/_dev/src/scss/components/_footer.scss
+++ b/assets/_dev/src/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	display          : flex;
 	justify-content  : space-around;
-	align-items      : center;
+	align-items		 : start;
 	background-color : $black;
 	padding          : 10rem 2rem;
 	color            : $white;
